--- a/api/templates/cheat.html
+++ b/api/templates/cheat.html
@@ -62,7 +62,7 @@ ip link add name bridge101 type bridge
 ip link set eth3 up
 ip link set bridge101 up
 ip link set eth3 master bridge101
-ip address add 2001:db8:beef::{{ id }}/128 dev lo
+ip -6 address add 2001:db8:beef::{{ id }}/128 dev lo
 </pre>
 
 <h2>Actividad 2.1.2</h2>
