--- a/api/templates/cheat.html
+++ b/api/templates/cheat.html
@@ -19,7 +19,7 @@ ip -6 address add 2001:db8:bebe:cafe::{{ id }}/64 dev eth1
 <h3>Leaf{{ id }}</h3>
 <pre>
 ip link set dev eth4 up
-ip -6 address add 2001:db8:db:e4::{{ id }}/64 dev eth1
+ip -6 address add 2001:db8:bd:e4::{{ id }}/64 dev eth4
 </pre>
 
 <h2>Actividad 1.1.1</h2>
